# PosePipeline-Sensorimotor

./: .gitattributes  .gitignore  pyproject.toml  run_datajoint.sh
docker/: run_datajoint.sh
pose_pipeline/: pipeline.py
pose_pipeline/utils/: tracking.py
pose_pipeline/wrappers/: bridging.py
scripts/: mmlab_install_mim.sh  run_all.sh  run_pipeline.py  setup_cuda.sh  verify_results.py  visualize_3d.py
