[project]
name = "pose_pipeline"
version = "2025.05.02"
description = "Video pose analysis pipelines for DataJoint."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datajoint>=0.14.4, <2.0",
    "matplotlib>=3.9.2",
    "motmetrics>=1.4.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.0.0",
    "openmim>=0.3.9",
    "pycocotools>=2.0.8",
    "pyrender>=0.1.45",
    "tensorflow[and-cuda]>=2.14.0",
    "tensorflow-hub",
    "tf-keras>=2.18.0",
    "torch>=2.0.1",
    "torchaudio>=2.0.2",
    "torchvision>=0.15.2"
]

[project.optional-dependencies]
# OpenCV variants - install ONE of these (or none if already installed)
opencv = ["opencv-python>=4.0.0"]
opencv-headless = ["opencv-python-headless>=4.0.0"]
opencv-contrib = ["opencv-contrib-python>=4.0.0"]
build = ["setuptools>70", "pip>22"]
compile = ["chumpy>0.4"]
dev = ["pytest","ipython","ipywidgets","ipympl","seaborn"]

[tool.uv]
no-build-isolation-package = ["chumpy"]

[[tool.uv.dependency-metadata]]
name = "chumpy"
version = "0.70"
requires-dist = ["numpy>=1.8.1", "scipy>=0.13.0", "six>=1.11.0"]

[[tool.uv.dependency-metadata]]
name = "lap"
version = "0.4.0"
requires-dist = ["numpy>=1.10.1"]

[tool.pytest.ini_options]
markers = [
    "gpu: requires GPU access",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
